--- a/templates/default/single-site.html.twig
+++ b/templates/default/single-site.html.twig
@@ -198,7 +198,7 @@
 
                         <div class="listing-title">
                             <h4>{{ site.name}}</h4>
-                            <h6>{{ site.adress}}</h6>
+                            <h6>{{ site.address}}</h6>
                         </div>
 
                         <div class="single-listing-nav">
@@ -358,7 +358,7 @@
                                         {{site.name}}
                                     </div>
                                     <div class="col-12">
-                                        {{site.adress}}
+                                        {{site.address}}
                                     </div>
                                     <div class="col-12">
                                        {{site.tel}}
