--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -19,10 +19,9 @@
                     <div class="hero-search-form">
                         <!-- Tabs -->
                         <div class="nav nav-tabs" id="heroTab" role="tablist">
-                            <a class="nav-item nav-link active" id="nav-places-tab" data-toggle="tab" href="#nav-places"
-                               role="tab" aria-controls="nav-places" aria-selected="true">Sites</a>
-                            <a class="nav-item nav-link" id="nav-events-tab" data-toggle="tab" href="#nav-events"
-                               role="tab" aria-controls="nav-events" aria-selected="false">Events</a>
+{#                           role="tab" aria-controls="nav-places" aria-selected="true">Sites</a>#}
+{#                            <a class="nav-item nav-link" id="nav-events-tab" data-toggle="tab" href="#nav-events"#}
+{#                               role="tab" aria-controls="nav-events" aria-selected="false">Events</a>#}
                         </div>
                         <!-- Tabs Content -->
                         <div class="tab-content" id="nav-tabContent">
@@ -30,13 +29,13 @@
                                  aria-labelledby="nav-places-tab">
                                 <h6>Que recherchez-vous?</h6>
                                 <form action="#" method="get">
-                                    <select class="custom-select">
-                                        <option selected>Moyens de transport</option>
-                                        <option value="1">A pied</option>
-                                        <option value="2">En voiture</option>
-                                        <option value="3">Autre</option>
+{#                                    <select class="custom-select">#}
+{#                                        <option selected>Moyens de transport</option>#}
+{#                                        <option value="1">A pied</option>#}
+{#                                        <option value="2">En voiture</option>#}
+{#                                        <option value="3">Autre</option>#}
 
-                                    </select>
+{#                                    </select>#}
                                     <select class="custom-select">
                                         <option selected>Toutes les catégories</option>
                                         {% for category in categories %}
