--- a/templates/default/contact.html.twig
+++ b/templates/default/contact.html.twig
@@ -18,40 +18,26 @@
         <!-- Contact Form Area -->
         <div class="contact-form-area equal-height">
             <div class="contact-text">
-                <h4>Hello, Get in touch with us</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam ac nibh sed mi ullamcorper rhoncus. Curabitur pulvinar vel augue sit amet vestibulum. Proin tempus lacus porta lorem blandit aliquam eget quis ipsum. Vivamus accumsan consequat ligula non volutpat. Sed mollis orci non cursus vestibulum. Pellentesque vitae est a augue laoreet venenatis sed eu felis. Sed cursus magna nec turpis ullamcorper, eget rutrum felis egestas. Nunc odio ex, fermentum efficitur nunc vitae, efficitur hendrerit diam. Lorem ipsum dolor sit amet, consectetur.</p>
+                <h4>Nous vous écoutons !</h4>
+                <p>Un avis ? Une suggestion, qui pourrait nous permettre de développer notre concept pour des expériences plus extraordinaires ? Ou tout simplement nous féliciter ;-D ? N'hésitez pas à nous laisser un message ! </p>
                 <div class="contact-info d-lg-flex">
                     <div class="single-contact-info">
-                        <h6><i class="fa fa-map-signs" aria-hidden="true"></i> Main Avenue Soho, NY</h6>
+                        <h6><i class="fa fa-map-signs" aria-hidden="true"></i> Boulevard de la mer, Saint-François</h6>
                         <h6><i class="fa fa-map-signs" aria-hidden="true"></i> No. 25-33</h6>
                     </div>
                     <div class="single-contact-info">
-                        <h6><i class="fa fa-envelope-o" aria-hidden="true"></i> contact@yourbusiness.com</h6>
-                        <h6><i class="fa fa-phone" aria-hidden="true"></i> +34 567 22478 49567</h6>
+                        <h6><i class="fa fa-envelope-o" aria-hidden="true"></i> contact@dmi.com</h6>
+                        <h6><i class="fa fa-phone" aria-hidden="true"></i> +590 690 11 22 33</h6>
                     </div>
                 </div>
             </div>
             <div class="contact-form">
                 <div class="contact-form-title">
-                    <h6>Contact Business</h6>
+                    <h6>Nous contacter</h6>
                 </div>
-                <form action="#">
+                <form action="#" method="post">
                     <div class="row">
-                        <div class="col-12 col-md-6">
-                            <input type="text" name="name" class="form-control" placeholder="Your Name">
-                        </div>
-                        <div class="col-12 col-md-6">
-                            <input type="email" name="email" class="form-control" placeholder="Email Address">
-                        </div>
-                        <div class="col-12">
-                            <input type="text" name="subject" class="form-control" placeholder="Subject">
-                        </div>
-                        <div class="col-12">
-                            <textarea name="message" class="form-control" id="Message" cols="30" rows="10" placeholder="Your Message"></textarea>
-                        </div>
-                        <div class="col-12">
-                            <button type="submit" class="btn dorne-btn">Send</button>
-                        </div>
+                       {{ form(form) }}
                     </div>
                 </form>
             </div>
