--- a/templates/default/contact.html.twig
+++ b/templates/default/contact.html.twig
@@ -32,18 +32,19 @@
                 </div>
             </div>
             <div class="contact-form">
-
             {% for message in app.flashes('notice') %}
                 <div class="alert alert-success">
                     {{ message }}
                 </div>
             {% endfor %}
-                <div class="contact-form-title">
+                <div class="contact-form-title text-center">
                     <h6>NOUS CONTACTER</h6>
                 </div>
                 <form action="#" method="post">
                     <div class="row">
+                        <div class="col-12">
                        {{ form(form) }}
+                        </div>
                     </div>
                 </form>
             </div>
