--- a/public/css/style.css
+++ b/public/css/style.css
@@ -909,7 +909,7 @@ li {
 /* Footer Area CSS */
 
 .dorne-footer-area {
-    padding:  30px 0;
+    padding: 30px 0 0 0;
     border-top: 1px solid #cc6908;
 
 
@@ -1039,6 +1039,7 @@ li {
         -ms-flex: 0 0 50%;
             flex: 0 0 50%;
     width: 50%;
+    height: 80vh;
 }
 
 .explore-search-form {
@@ -1108,7 +1109,7 @@ li {
     padding: 0 40px;
     position: relative;
     z-index: 1;
-    height: 1100px;
+    height: 80vh;
     overflow-y: auto;
 }
 
