--- a/templates/components/footer.html.twig
+++ b/templates/components/footer.html.twig
@@ -18,14 +18,12 @@
                         <button type="submit" class="btn dorne-btn ">S'ABONNER</button>
                     </form>
                 </div>
-                <div class="col-4 footer-social-btns">
+                <div class="col-3 footer-social-btns">
                     <a href="#"><i class="fa fa-facebook" aria-haspopup="true"></i></a>
                     <a href="#"><i class="fa fa-twitter" aria-haspopup="true"></i></a>
                     <a href="#"><i class="fa fa-linkedin" aria-haspopup="true"></i></a>
                     <a href="#"><i class="fa fa-behance" aria-hidden="true"></i></a>
                     <a href="#"><i class="fa fa-dribbble" aria-hidden="true"></i></a>
-
-
                 </div>
 
             </div>
@@ -33,7 +31,7 @@
         <div class="row bg-default justify-content-center mt-2 ">
             <div class="footer-text text-center">
                 <p class="text-center p-2">
-                    Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="http://www.dgitalqueen.com" target="_blank">DgitalQueen</a>
+                    Copyright &copy; {{ "now"|date("Y") }} Tous droits réservés</a>
                 </p>
             </div>
         </div>
