--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -134,10 +134,10 @@
                 <div class="col-12">
                     <div class="features-slides owl-carousel">
                         <!-- Single Site Area -->
-                        {% for site in sites %}
+                        {% for course in courses %}
                             <div class="single-features-area">
-                                <img class="img-fluid" width="413" height="275"
-                                     src="{{ asset('img/sites-img/' ~ site.image) }}" alt="{{ site.name }}">
+                                <img class="img-dmi"
+                                     src="{{ asset('img/sites-img/' ~ course.visits.0.site.image) }}" alt="{{ course.name }}">
                                 <!-- Rating & Map Area -->
                                 <div class="ratings-map-area d-flex">
                                     <a href="#">8.5</a>
@@ -145,14 +145,10 @@
                                 </div>
                                 <div class="feature-content d-flex align-items-center justify-content-between">
                                     <div class="feature-title">
-                                        <h5>{{ site.name }}</h5>
+                                        <h5>{{ course.name }}</h5>
                                     </div>
                                     <div class="feature-favourite">
-                                        <a href="{{ path('default_site', {
-                                            alias : site.alias,
-                                            id : site.id,
-                                            category : site.category.alias}
-                                        ) }}"><i class="fa fa-heart-o" aria-hidden="true"></i></a>
+                                        <a href="#"><i class="fa fa-heart-o" aria-hidden="true"></i></a>
                                     </div>
                                 </div>
                             </div>
@@ -171,10 +167,10 @@
             <div class="row">
                 <div class="col-12">
                     <div class="clients-logo d-md-flex align-items-center justify-content-around">
-                        <img style=" width:100px; height:100px;" src="{{ asset('img/clients-img/1.png') }}" alt="">
-                        <img style=" width:80px; height:80px;" src="{{ asset('img/clients-img/2.png') }}" alt="">
-                        <img style=" width:80px; height:80px;" src="{{ asset('img/clients-img/3.png') }}" alt="">
-                        <img style=" width:100px; height:100px;" src="{{ asset('img/clients-img/4.png') }}" alt="">
+                        <img style=" height:80px;" src="{{ asset('img/clients-img/1.png') }}" alt="">
+                        <img style=" height:80px;" src="{{ asset('img/clients-img/2.png') }}" alt="">
+                        <img style=" height:80px;" src="{{ asset('img/clients-img/3.png') }}" alt="">
+                        <img style=" height:80px;" src="{{ asset('img/clients-img/4.png') }}" alt="">
                     </div>
                 </div>
             </div>
